# puppy-home

./: .gitignore  COMPARISON.md  Cargo.toml  GATE_FEEDBACK.md  GPUI_NOTES.md  PARITY.md  README.md  REDESIGN_QA.md  WINDOWS_GATE.md
.claude/: HANDOFF.md  claude_plan.md  settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: DEN_HOSTING.md
plugins/browser/: Cargo.toml
plugins/browser/src/: main.rs
relay/: Cargo.toml
relay/src/: hub.rs  lib.rs  main.rs  protocol.rs  server.rs
relay/tests/: e2e.rs
scripts/: build-release.ps1  diag_find_400.py  diag_replay_dump.py  verify_history_repair.py  verify_oauth_refresh_race.py
sidecar/: cdp_helper.py  pack_helper.py  sidecar.py
src/: app.rs  browser.rs  dock_layout.rs  fonts.rs  git.rs  main.rs  pack.rs  perf.rs  plugin.rs  proc.rs  session.rs  supervisor.rs  terminal.rs  waker.rs  workspace.rs
src/app/: mod.rs  pack_sync.rs  remote.rs
src/backend/: creds_push.rs  mod.rs  protocol.rs  remote.rs  ssh.rs  ssh_fallback.rs  types.rs
src/browser/: embed.rs  embed_mac.rs  host.rs  mod.rs
src/git/: runner.rs
src/gpui_ui/: about.rs  actions.rs  assets.rs  avatars.rs  browser_ui.rs  editor.rs  gitpanel.rs  input.rs  managers.rs  managers_agents.rs  managers_agents_wizard.rs  managers_config.rs  managers_judges.rs  managers_mcp.rs  managers_models.rs  managers_skills.rs  managers_ui.rs  markdown.rs  mod.rs  perf_ui.rs  remote.rs  remote_ui.rs  right_sidebar.rs  terminal.rs  theme_editor_ui.rs  theme_ui.rs  tokens.rs  waker.rs  widgets.rs
src/gpui_ui/chat/: ask.rs  composer.rs  mod.rs  sessions.rs  transcript.rs
src/gpui_ui/dashboard/: card.rs  header.rs  mod.rs  model_pill.rs  table.rs
src/gpui_ui/den/: actions.rs  board.rs  feed.rs  host.rs  mod.rs  pack_sync.rs  roster.rs
src/shell/: mod.rs
src/theme/: editor.rs  library.rs  mod.rs  terminal.rs
src/views/: agent_manager.rs  agent_wizard.rs  common.rs  dashboard.rs  mcp_manager.rs  mod.rs  pack_panel.rs  path_browser.rs  remote_connect.rs  skills_manager.rs  skills_wizard.rs  widgets.rs
src/views/agent_wizard/: mod.rs  steps.rs
src/views/dashboard/: card.rs  mod.rs  table.rs
src/views/den/: board.rs  feed.rs  join.rs  mod.rs  roster.rs
src/views/mcp_wizard/: mod.rs  steps.rs
src/workspace/: ask.rs  chat.rs  chat_body.rs  clipboard.rs  composer.rs  diff.rs  dock.rs  editor.rs  editor_area.rs  events.rs  file_picker.rs  fs.rs  git_creds.rs  git_graph.rs  git_graph_view.rs  git_view.rs  goal.rs  mod.rs  pending_prompt.rs  render.rs  sessions.rs  state.rs  tree_ops.rs  view.rs
tests/: pty_live.rs  vt100_grid.rs
