[package]
name = "puppy-home"
version = "0.1.0"
edition = "2024"
description = "An AI agent application — Code Puppy as the default agent."

[dependencies]
# Native windowed GUI (egui in immediate mode, cross-platform, pure Rust).
eframe = "0.34.3"
egui_commonmark = "0.23"
egui_dock = "0.19.1"
egui_extras = { version = "0.34", features = ["syntect"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# As we grow: tokio (async runtime), reqwest (HTTP), serde (config),
# and an LLM client will go here.
