[package]
name = "puppy-home"
version = "0.1.0"
edition = "2024"
description = "An AI agent application — Code Puppy as the default agent."

# The optional browser plugin is a SEPARATE crate so its heavy webview deps
# (wry/tao) never bloat the base app — the app only ever launches its built exe.
[workspace]
members = ["plugins/browser"]

[dependencies]
# Native windowed GUI (egui in immediate mode, cross-platform, pure Rust).
eframe = "0.34.3"
egui_commonmark = "0.23"
egui_dock = "0.19.1"
egui_extras = { version = "0.34", features = ["syntect"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Full PTY terminal: a real pseudo-terminal (ConPTY on Windows) + a VT100/ANSI
# screen parser so curses-style TUIs (vim, top), colors, and cursor control work.
portable-pty = "0.9"
vt100 = "0.16"
# Clipboard image paste: read the OS clipboard image (egui only does text),
# encode it to PNG, and base64 it for the sidecar's multimodal attachments.
arboard = "3.4"
png = "0.17"
base64 = "0.22"
# Windows-only: reparent the browser plugin's native window into our window so
# the webview renders inside the Browser tab (native-child-window embedding).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

# As we grow: tokio (async runtime), reqwest (HTTP), serde (config),
# and an LLM client will go here.
