[package]
name = "puppy-home"
version = "0.1.0"
edition = "2024"
description = "An AI agent application — Code Puppy as the default agent."

# objc 0.2's msg_send! macros reference a long-dead `cargo-clippy` feature cfg;
# declare it expected so `unexpected_cfgs` still flags real typos but not this
# third-party macro noise (used by the macOS browser-embedding FFI).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

# The optional browser plugin is a SEPARATE crate so its heavy webview deps
# (wry/tao) never bloat the base app — the app only ever launches its built exe.
# puppy-relay is the tiny Puppy Pack room server (run it anywhere reachable).
[workspace]
members = ["plugins/browser", "relay"]

[dependencies]
# GPUI (Zed's UI framework) — THE frontend on this branch.
# PINNED: rev 601ecb3ee5c16940191818ee7f244837abf6983c = tag v1.6.3,
# the newest *stable* (non -pre) Zed release at bump time (G4, 2026-06-15;
# bumped from v0.199.10 @ 00789bf for freshness, accepting the API chase).
# ARCHITECTURE CHANGE since v0.199.10: the OS platform backends were split
# out of the core `gpui` crate into `gpui_platform` (+ gpui_macos/_windows/
# _linux). The app entry now builds the platform explicitly via
# `gpui_platform::current_platform(false)` -> `Application::with_platform(..)`
# (was `Application::new()`). `runtime_shaders` (runtime Metal compile, needed
# on this CLT-only Mac) moved to `gpui_platform` -> `gpui_macos`.
gpui = { git = "https://github.com/zed-industries/zed", rev = "601ecb3ee5c16940191818ee7f244837abf6983c" }
# Platform backends + the entry-point factory. `runtime_shaders` is macOS;
# `wayland`/`x11` keep the Linux CI leg building (inert on mac/windows).
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "601ecb3ee5c16940191818ee7f244837abf6983c", features = ["runtime_shaders", "wayland", "x11"] }
# Async select/pin helpers for the GPUI drain loop (gpui already pulls this in
# transitively; declaring it just makes our use explicit).
futures = "0.3"
# gpui's AssetSource trait speaks anyhow::Result; transitively present anyway.
anyhow = "1"
# Grapheme-correct cursor movement in the GPUI composer input (same crate the
# gpui input example uses; tiny, already in the tree transitively).
unicode-segmentation = "1"
# Syntax highlighting for the GPUI editor tabs (5.3.0, default-fancy =
# pure-Rust regex engine, no Oniguruma C dependency).
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# Native file/folder open dialogs (GPUI has no built-in picker).
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Full PTY terminal: a real pseudo-terminal (ConPTY on Windows) + a VT100/ANSI
# screen parser so curses-style TUIs (vim, top), colors, and cursor control work.
portable-pty = "0.9"
vt100 = "0.16"
# Clipboard image paste: read the OS clipboard image (egui only does text),
# encode it to PNG, and base64 it for the sidecar's multimodal attachments.
arboard = "3.4"
png = "0.17"
base64 = "0.22"
# Decode + downscale a chosen photo avatar into a tiny PNG thumbnail so it can
# travel over the den relay to teammates (a file path is local-only). Scoped
# to common photo formats to keep compile time + binary size down.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
# Puppy Pack: share the relay's wire types (one protocol definition, both ends).
puppy-relay = { path = "relay" }
# Windows-only: reparent the browser plugin's native window into our window so
# the webview renders inside the Browser tab (native-child-window embedding).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
raw-window-handle = "0.6"

# macOS-only: read the host NSWindow number (to z-order the browser overlay just
# above us) from the GPUI window's NSView.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
raw-window-handle = "0.6"

# As we grow: tokio (async runtime), reqwest (HTTP), serde (config),
# and an LLM client will go here.

# Distributable builds: slimmer + faster. Panic stays `unwind` so the
# crash-logger hook in main.rs keeps working.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
